--- a/.github/workflows/snapshot-release.yml
+++ b/.github/workflows/snapshot-release.yml
@@ -97,6 +97,13 @@ jobs:
           run-quality-checks: 'true'
           skip-tests: 'false'
 
+      - name: Cleanup existing snapshots of same version
+        uses: ./.github/actions/cleanup-snapshots
+        with:
+          cleanup-mode: 'same-version'
+          current-version: ${{ steps.snapshot_version.outputs.snapshot_version }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Publish SNAPSHOT to GitHub Packages
         run: |
           echo "Publishing SNAPSHOT to GitHub Packages..."
@@ -104,21 +111,12 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Cleanup old snapshots
-        run: |
-          echo "🧹 Cleaning up old snapshots (keeping latest 3)..."
-          
-          # Get all snapshot releases
-          SNAPSHOT_RELEASES=$(gh release list --limit 50 --json tagName,isPrerelease,createdAt | jq -r '.[] | select(.isPrerelease == true and (.tagName | contains("snapshot-"))) | .tagName' | tail -n +4)
-          
-          for snapshot in $SNAPSHOT_RELEASES; do
-            echo "Deleting old snapshot: $snapshot"
-            gh release delete $snapshot --yes --cleanup-tag || echo "Failed to delete $snapshot"
-          done
-          
-          echo "✅ Old snapshots cleanup completed"
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Cleanup old versions
+        uses: ./.github/actions/cleanup-snapshots
+        with:
+          cleanup-mode: 'old-versions'
+          keep-versions-count: '3'
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create snapshot tag and pre-release
         id: create_prerelease
